--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,13 +4,50 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<html lang="en">
+<head>
+    <title>Caviste</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+</head>
+<body>
+
+<main>
+    <div class="container">
+        <div class="row">
+          <div class="col">
+              <header>
+                  <div><a href="#"><img src="images/caviste-logo.png" width="50" alt="caviste"></a></div>
+                  <h1>Caviste</h1>
+                  <nav>
+                      <ul>
+                          <li>Home</li>
+                          <li>About</li>
+                      </ul>
+                  </nav>
+              </header>
+              <form id="frmSearch" action="#" method="get"  class="form-inline">
+                  <input type="text" name="keyword"
+                         id="keyword" placeholder="Enter  word" 
+                         class="form-control mr-2">
+                  <button class="btn btn-success mr-2" id="btSearch" name="btSearch">Search</button>
+                  <a class="btn btn-primary" href="#" id="newWine">new Wine</a>
+              </form>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-4">
+          </div>
+           <div class="col-8">
+          </div>
+        </div> 
+    </div>
+</main>
+    <footer>&copy; Epfc</footer>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+</body>
 </html>
