--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,6 +10,7 @@ and open the template in the editor.
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -18,15 +19,18 @@ and open the template in the editor.
         <div class="row">
           <div class="col">
               <header>
-                  <div><a href="#"><img src="images/caviste-logo.png" width="50" alt="caviste"></a></div>
-                  <h1>Caviste</h1>
-                  <nav>
-                      <ul>
-                          <li>Home</li>
-                          <li>About</li>
+                  <div>
+                    <a href="#" id="logo"><img src="images/caviste-logo.png" width="50" alt="caviste"></a>
+                    <h1>Caviste</h1>
+                  </div>
+                  <nav >
+                      <ul class="nav">
+                          <li class="nav-item"> <a class="nav-link active" href="#">Home</a></li>
+                          <li class="nav-item"> <a class="nav-link " href="#">About</a></li>
                       </ul>
                   </nav>
               </header>
+              <div>
               <form id="frmSearch" action="#" method="get"  class="form-inline">
                   <input type="text" name="keyword"
                          id="keyword" placeholder="Enter  word" 
@@ -34,6 +38,7 @@ and open the template in the editor.
                   <button class="btn btn-success mr-2" id="btSearch" name="btSearch">Search</button>
                   <a class="btn btn-primary" href="#" id="newWine">new Wine</a>
               </form>
+              </div>
           </div>
         </div>
         <div class="row">
