--- a/public_html/index.html
+++ b/public_html/index.html
@@ -43,11 +43,8 @@ and open the template in the editor.
         </div>
         <div class="row">
           <div class="col-4">
-            <ul class="list-group">
-                <li class="list-group-item">Terre de Bussière : La Janasse</li>
-                <li class="list-group-item">Vieilles Vignes</li>
-                <li class="list-group-item">Clos des Cazaux</li>
-              </ul>
+            <ul class="list-group" id='listVin'>
+            </ul>
           </div>
            <div class="col-8">
                <div class="row">
