--- a/public_html/index.html
+++ b/public_html/index.html
@@ -49,14 +49,14 @@ and open the template in the editor.
            <div class="col-8">
                <div class="row">
                    <div class="col-6">
-                    <form>
+                       <form id="frmWine" method="post">
                         <div class="form-group">
                           <label for="formGroupExampleInput">name</label>
                           <input type="text" class="form-control" id="name" placeholder="name">
                         </div>
                         <div class="form-group">
                           <label for="formGroupExampleInput2">grapes</label>
-                          <input type="text" class="form-control" id="grappe" placeholder="grape">
+                          <input type="text" class="form-control" id="grapes" placeholder="grape">
                         </div>
                         <div class="form-group">
                             <label for="formGroupExampleInput">country</label>
@@ -72,10 +72,10 @@ and open the template in the editor.
                           </div>
                           <div class="form-row">
                               <div class="col-md-3 mb-3">
-                                <button class="btn btn-success mr-2" type="submit" id="btSubmit" name="btSubmit">submit</button>
+                                <button class="btn btn-success mr-2" type="button" id="btSubmit" name="btSubmit">submit</button>
                               </div>
                               <div class="col-md-3 mb-3">
-                                <button class="btn btn-danger mr-2" type="delete" id="btDelete" name="btDelete">delete</button>
+                                <button class="btn btn-danger mr-2" type="button" id="btDelete" name="btDelete">delete</button>
                               </div>
                           </div>
                           
