--- a/public_html/index.html
+++ b/public_html/index.html
@@ -35,7 +35,7 @@ and open the template in the editor.
                   <input type="text" name="keyword"
                          id="keyword" placeholder="Enter  word" 
                          class="form-control mr-2">
-                  <button class="btn btn-success mr-2" id="btSearch" name="btSearch">Search</button>
+                  <button class="btn btn-success mr-2" id="btSearch" name="btSearch" type="button">Search</button>
                   <a class="btn btn-primary" href="#" id="newWine">new Wine</a>
               </form>
               </div>
