post put delete

--- a/moncellier/index.html
+++ b/moncellier/index.html
@@ -52,6 +52,10 @@ and open the template in the editor.
                         <div class="row">
                         <div class="col-6">
                         <div class="form-group">
+                          <label for="formGroupExampleInput">id</label>
+                          <input type="text" class="form-control" id="id" placeholder="id" disabled>
+                        </div>
+                        <div class="form-group">
                           <label for="formGroupExampleInput">name</label>
                           <input type="text" class="form-control" id="name" placeholder="name">
                         </div>
@@ -68,8 +72,8 @@ and open the template in the editor.
                             <input type="text" class="form-control" id="region" placeholder="region">
                           </div>
                           <div class="form-group">
-                            <label for="formGroupExampleInput">Years</label>
-                            <input type="text" class="form-control" id="years" placeholder="years">
+                            <label for="formGroupExampleInput">Year</label>
+                            <input type="text" class="form-control" id="year" placeholder="year">
                           </div>
                           <div class="form-row">
                               <div class="col-md-3 mb-3">
